RESOLVED FIXED274663
REGRESSION (279257@main): [ MacOS ] 2 tests are consistent failure and fast/dom/document-all.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=274663
Summary REGRESSION (279257@main): [ MacOS ] 2 tests are consistent failure and fast/d...
Jay Stfleur
Reported 2024-05-24 10:45:50 PDT
Created attachment 471503 [details] document-all.html diff Description: fast/dom/document-all.html http/wpt/service-workers/service-worker-spinning-activate.https.html inspector/runtime/execution-context-in-scriptless-page.html all 3 test have same regression point on 279257@main. fast/dom/document-all.html is timing out on Debug only. History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fdom%2Fdocument-all.html&test=http%2Fwpt%2Fservice-workers%2Fservice-worker-spinning-activate.https.html&test=inspector%2Fruntime%2Fexecution-context-in-scriptless-page.html&platform=ios&platform=mac Diff/Image Diff/Crash Log: http/wpt/service-workers/service-worker-spinning-activate.https.html --- /Volumes/Data/worker/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/wpt/service-workers/service-worker-spinning-activate.https-expected.txt +++ /Volumes/Data/worker/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/wpt/service-workers/service-worker-spinning-activate.https-actual.txt @@ -1,5 +1,7 @@ -PASS Spin in activate -PASS Spin after activate +Harness Error (TIMEOUT), message = null +TIMEOUT Spin in activate Test timed out +NOTRUN Spin after activate + inspector/runtime/execution-context-in-scriptless-page.html: --- /Volumes/Data/worker/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/build/layout-test-results/inspector/runtime/execution-context-in-scriptless-page-expected.txt +++ /Volumes/Data/worker/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/build/layout-test-results/inspector/runtime/execution-context-in-scriptless-page-actual.txt @@ -4,5 +4,7 @@ == Running test suite: Runtime.executionContextCreated.ContextWithoutScript -- Running test case: Runtime.executionContextCreated.ContextWithoutScript.SubFrame PASS: Should receive Runtime.executionContextCreated notification. -PASS: Should be able to evaluate in subframe. +FAIL: Should be able to evaluate in subframe. + Expected: "No JavaScript." + Actual: ""
Attachments
document-all.html diff (3.22 KB, text/plain)
2024-05-24 10:45 PDT, Jay Stfleur
no flags
Radar WebKit Bug Importer
Comment 1 2024-05-24 10:46:10 PDT
Alex Christensen
Comment 2 2024-05-24 11:38:40 PDT
EWS
Comment 3 2024-05-24 11:41:06 PDT
Committed 279282@main (5b900f319f3b): <https://commits.webkit.org/279282@main> Reviewed commits have been landed. Closing PR #29071 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.