Source/WebCore/page/Navigation.cpp
@@ -28,11 +28,9 @@
 
 #include "AbortController.h"
 #include "CallbackResult.h"
-#include "DOMFormData.h"
 #include "ErrorEvent.h"
 #include "EventNames.h"
 #include "Exception.h"
-#include "FormState.h"
 #include "FrameLoadRequest.h"
 #include "FrameLoader.h"
 #include "FrameLoaderTypes.h"
@@ -576,8 +574,9 @@ void Navigation::abortOngoingNavigation(NavigateEvent& event)
 }
 
 // https://html.spec.whatwg.org/multipage/nav-history-apis.html#inner-navigate-event-firing-algorithm
-bool Navigation::innerDispatchNavigateEvent(NavigationNavigationType navigationType, Ref<NavigationDestination>&& destination, const String& downloadRequestFilename, FormState* formState)
+bool Navigation::innerDispatchNavigateEvent(NavigationNavigationType navigationType, Ref<NavigationDestination>&& destination, const String& downloadRequestFilename)
 {
+    // FIXME: pass in formDataEntryList
     if (hasEntriesAndEventsDisabled()) {
         ASSERT(!m_ongoingAPIMethodTracker);
         ASSERT(!m_upcomingNonTraverseMethodTracker);
@@ -600,13 +599,6 @@ bool Navigation::innerDispatchNavigateEvent(NavigationNavigationType navigationT
     bool hashChange = equalIgnoringFragmentIdentifier(document->url(), destination->url()) && !equalRespectingNullity(document->url().fragmentIdentifier(),  destination->url().fragmentIdentifier());
     auto info = apiMethodTracker ? apiMethodTracker->info : JSC::jsUndefined();
 
-    RefPtr<DOMFormData> formData = nullptr;
-    if (formState && (navigationType == NavigationNavigationType::Push || navigationType == NavigationNavigationType::Replace)) {
-        // FIXME: Set submitter element.
-        if (auto domFormData = DOMFormData::create(*scriptExecutionContext(), &formState->form(), nullptr); !domFormData.hasException())
-            formData = domFormData.releaseReturnValue();
-    }
-
     RefPtr abortController = AbortController::create(*scriptExecutionContext());
 
     auto init = NavigateEvent::Init {
@@ -614,7 +606,7 @@ bool Navigation::innerDispatchNavigateEvent(NavigationNavigationType navigationT
         navigationType,
         destination.ptr(),
         abortController->protectedSignal(),
-        formData,
+        nullptr, // FIXME: formData
         downloadRequestFilename,
         info,
         canIntercept,
@@ -733,22 +725,22 @@ bool Navigation::dispatchTraversalNavigateEvent(HistoryItem& historyItem)
     // FIXME: Set destinations state
     Ref destination = NavigationDestination::create(historyItem.url(), WTFMove(destinationEntry), isSameDocument);
 
-    return innerDispatchNavigateEvent(NavigationNavigationType::Traverse, WTFMove(destination), { }, nullptr);
+    return innerDispatchNavigateEvent(NavigationNavigationType::Traverse, WTFMove(destination), { });
 }
 
 // https://html.spec.whatwg.org/multipage/nav-history-apis.html#fire-a-push/replace/reload-navigate-event
-bool Navigation::dispatchPushReplaceReloadNavigateEvent(const URL& url, NavigationNavigationType navigationType, bool isSameDocument, FormState* formState)
+bool Navigation::dispatchPushReplaceReloadNavigateEvent(const URL& url, NavigationNavigationType navigationType, bool isSameDocument)
 {
     // FIXME: Set event's classic history API state to classicHistoryAPIState.
     Ref destination = NavigationDestination::create(url, nullptr, isSameDocument);
-    return innerDispatchNavigateEvent(navigationType, WTFMove(destination), { }, formState);
+    return innerDispatchNavigateEvent(navigationType, WTFMove(destination), { });
 }
 
 // https://html.spec.whatwg.org/multipage/nav-history-apis.html#fire-a-download-request-navigate-event
 bool Navigation::dispatchDownloadNavigateEvent(const URL& url, const String& downloadFilename)
 {
     Ref destination = NavigationDestination::create(url, nullptr, false);
-    return innerDispatchNavigateEvent(NavigationNavigationType::Push, WTFMove(destination), downloadFilename, nullptr);
+    return innerDispatchNavigateEvent(NavigationNavigationType::Push, WTFMove(destination), downloadFilename);
 }
 
 } // namespace WebCore
